refactor(log): 引入 loglevel 日志库，统一日志格式和级别控制
- 新增 src/utils/logger.ts 日志服务，支持模块化日志和日志级别
- 精简 DeviceSelector 和 maaService 中的冗余调试日志
- 统一日志格式为 [时间戳][模块名] 消息
- 开发环境默认 debug 级别，生产环境默认 warn 级别

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tauri-apps/plugin-opener": "^2",
     "clsx": "^2.1.1",
     "i18next": "^25.7.4",
+    "loglevel": "^1.9.2",
     "lucide-react": "^0.562.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
