--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -40,6 +40,7 @@ tokio = { version = "1", features = ["rt"] }
 reqwest = { version = "0.12", features = ["stream"] }
 futures-util = "0.3"
 libc = "0.2.180"
+semver = "1.0"
 
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.58", features = [
