--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,css,json}\" \"*.{json,md}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,css,json}\" \"*.{json,md}\"",
+    "format:rust": "cd src-tauri && cargo fmt",
+    "format:all": "pnpm format && pnpm format:rust"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -37,6 +41,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
+    "prettier": "^3.5.3",
     "typescript": "~5.8.3",
     "vite": "^7.0.4"
   },
