--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tauri-apps/plugin-process": "^2",
     "clsx": "^2.1.1",
     "dompurify": "^3.3.1",
+    "driver.js": "^1.4.0",
     "i18next": "^25.7.4",
     "jsonc-parser": "^3.3.1",
     "loglevel": "^1.9.2",
